--- a/product.html
+++ b/product.html
@@ -4,131 +4,227 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<title>產品介紹</title>
 <link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
+<title>產品介紹</title>
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #2d7a44;">
-		<img src="images/logo.png" class="img-fluid" alt="logo" style="width:200px;height:75px;">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-			<span class="navbar-toggler-icon"></span>
+	<section id="intro">
+		<div class="container">
+			<div class="navbar navbar-expand-md">
+			<img src="images/logo1.png" class="img-fluid" alt="logo">
+			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<span class="fas fa-bars"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-			<ul class="navbar-nav">
-			 <a class="navbar-brand" href="index.html">       
-				</a>
+			<div class="collapse navbar-collapse " id="collapsibleNavbar">
 				<ul class="navbar-nav ">
-					 <li class="nav-item">
-					<a class="nav-link" href="index.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">關於龍品</a>
-					 </li>
-					 <li class="nav-item">
-					<a class="nav-link" href="product.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">產品介紹</a>
-					 </li>
+						<a class="navbar-brand" href="index.html"></a>
+				<ul class="navbar-nav ">
 					<li class="nav-item">
-					<a class="nav-link" href="booking.html" style ="font-size: 25px;font-family:cwTeXYen,sans-serif;color:white">線上訂餐</a>
-					</li>
+						<a class="nav-link" href="index.html">關於龍品</a></li>
+					<li class="nav-item">
+						<a class="nav-link" href="product.html">產品介紹</a></li>
+					<li class="nav-item">
+						<a class="nav-link" href="booking.html" >線上訂餐</a>
+					<li>
 				</ul>
 			</div>  
-	</nav>
+		</div>
+	</section>	
+<section id="second" >
+	<div class="w3-display-container">
+		<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店"  style="height: 650px; width:100%;">
+		<div class="w3-display-middle ">
+		<h1>產品介紹</h1>
+		<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
+		</div>
+	</div>
+</section>
 
-      <div class="w3-display-container w3-text-white">
-        <img src="images\13.jpg" class="img-fluid" alt="龍品快餐店"  style="margin-bottom:10; height: 300px; width:100%;">
-        <div class="w3-display-middle w3-large"><b style ="font-size: 50px;font-family:cwTeXYen,sans-serif;color:rgb(255, 255, 255);">產品介紹</b></div>
-      </div>
-
-        <div class="btn-group" style="margin:10px 8px;width:100%;">  
-          <a class="btn btn-blue"  href="#a1">魯肉便當</a>
+<div style="background-image: url('images/bg.jpeg');">      
+<section id="third">
+	<div class="container-fluid">
+		<div class="btn-group">
+			<a class="btn btn-blue"  href="#a1">魯肉便當</a>
 	        <a class="btn  btn-green" href="#a2">特製便當</a>
 	        <a class="btn  btn-orange" href="#a3">花枝捲飯</a>
 	        <a class="btn  btn-red" href="#a4">蝦捲飯</a>
 	        <a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
-	        <a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>      
-	
-        </div>
-        <div class="btn-group" style="margin:10px 8px;width:100%;"> 
-        	<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
+	        <a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>     
+		</div>
+		<div class="btn-group">
+			<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
 	        <a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
         	<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
 	        <a class="btn  btn-gold" href="#a10">雙捲飯</a>
 	        <a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
 	        <a class="btn  btn-royalblue" href="#a12">招牌飯</a>
-        </div >
-	
-<div class="container" id="a1" style="margin-top:10em;">
-	<img src="images\section1.jpg" align="left" style="width:450px ;height:300px;"/>  
-	<p class="font8">魯肉便當 <hr></p>
-	<p class="font9">主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
-</div>
-<div class="container" id="a2" style="margin-top:10em;">
-	<img src="images\section2.jpg" align="right" style="width:450px ;height:300px;" />
-	<p class="font8">特製便當<hr></p>
-	<p class="font9">主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
+		</div>
 	</div>
- <div class="container" id="a3" style="margin-top:10em;">
-	<img src="images\section1.jpg" align="left" style="width:450px ;height:300px" />  
-	<p class="font8">花枝捲飯<hr></p>
-	<p class="font9">主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a4" style="margin-top:10em;">
-	<img src="images\section4.jpg" align="right" style="width:450px ;height:300px"/>
-	<p class="font8">蝦捲飯<hr></p>	
-	<p class="font9">主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a5" style="margin-top:10em;">
-<figure>
-	<img src="images\section5.jpg" align="left" style="width:450px ;height:300px"/>
-	<p class="font8">滷排骨飯<hr></p>
-	<p class="font9">主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
-	</figure>
-</div>
-<div class="container" id="a6" style="margin-top:10em;">
-	<img src="images\section6.jpg" align="right" style="width:450px ;height:300px"/>
-	<p class="font8">炸雞腿飯<hr></p>
-	<p class="font9">主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a7" style="margin-top:10em;">
-	<img src="images\section7.jpg"align="left" style="width:450px ;height:300px"/>
-	<p class="font8">鱈魚飯<hr></p>
-	<p class="font9">主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
-</div>
-<div class="container" id="a8" style="margin-top:10em;">
-	<img src="images\section8.jpg" align="right" style="width:450px ;height:300px"/>
-	<p class="font8">炸排骨飯<hr></p>
-	<p class="font9">主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
-</div>
-<div class="container" id="a9" style="margin-top:10em;">
-	<img src="images\section9.jpg"align="left" style="width:450px ;height:300px"/>
-	<p class="font8">香雞排飯<hr></p>
-	<p class="font9">主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a10" style="margin-top:10em;">
-	<img src="images\section10.jpg" align="right" style="width:450px ;height:300px"/>
-	<p class="font8">雙捲飯<hr></p>
-	<p class="font9">主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a11" style="margin-top:10em;">
-	<img src="images\section11.jpg" align="left" style="width:450px ;height:300px"/>
-	<p class="font8">三寶飯<hr></p>
-	<p class="font9">主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div class="container" id="a12" style="margin:10em 0;">
-	<img src="images\section12.jpg" align="right" style="width:450px ;height:300px"/>
-	<p class="font8">招牌飯<hr></p>
-	<p class="font9">主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
-</div>
-<div id="Footer">
-		<p  style="font-family:cwTeXYen,sans-serif;color:white;font-size:25px">。地址：台中市北區北平路二段68之1號</p>
-		<p  style="font-family:cwTeXYen,sans-serif;color:white;font-size:25px">。備註：如餐點需訂購10份以上，請撥電話:04-2291-8106。</p>
+</section>
+    
+<section id="fourth">
+	<div class="container" id="a1">
+		<div class="row">
+			<div class="col-md-6" >
+				<img class="img-fluid" class="img-fluid" src="images\1.png">
 			</div>
-</div>
+			<div class="col-md-6" >
+				<h1>魯肉便當 </h1>
+				<p >主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
+			</div>
+		</div>
+	</div>
 
+	<div class="container" id="a2">
+		<div class="row">
+			<div class="col-md-6" >
+				<h1>特製便當</h1>
+				<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
+			</div>
+			<div class="col-md-6" >
+				<img class="img-fluid" src="images\7.png">
+			</div>
+		</div>
+	</div>
+	<div class="container" id="a3">
+		<div class="row">
+			<div class="col-md-6" >
+				<img class="img-fluid" src="images\7.png"/>  
+	</div>
+	<div class="col-md-6">
+		<h1>花枝捲飯</h1>
+		<p>主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a4">
+		<div class="row">
+	<div class="col-md-6">
+		<h1>蝦捲飯</h1>	
+		<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+	<div class="col-md-6" >
+		<img class="img-fluid" src="images\7.png"/>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a5">
+		<div class="row">
+			<div class="col-md-6" >
+				<img class="img-fluid" src="images\7.png"/>
+	</div>
+	<div class="col-md-6">
+		<h1>滷排骨飯</h1>
+		<p>主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a6">
+		<div class="row">
+	<div class="col-md-6">
+		<h1>炸雞腿飯</h1>
+		<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+	<div class="col-md-6" >
+		<img class="img-fluid" src="images\7.png"/>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a7">
+		<div class="row">
+			<div class="col-md-6" >
+		<img class="img-fluid" src="images\7.png"/>
+	</div>
+	<div class="col-md-6">
+		<h1>鱈魚飯</h1>
+		<p>主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a8">
+		<div class="row">	
+	<div class="col-md-6">
+		<h1>炸排骨飯</h1>
+		<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
+	</div>
+	<div class="col-md-6" >
+		<img class="img-fluid" src="images\7.png"/>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a9">
+		<div class="row">
+			<div class="col-md-6" >
+				<img class="img-fluid" src="images\7.png">
+	</div>
+	<div class="col-md-6">
+		<h1>香雞排飯</h1>
+		<p>主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a10">
+		<div class="row">
+			<div class="col-md-6">
+			<h1>雙捲飯</h1>
+			<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
+		</div>
+			<div class="col-md-6" >
+				<img class="img-fluid" src="images\7.png">
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a11">
+		<div class="row">
+			<div class="col-md-6" >
+			<img class="img-fluid" src="images\7.png">
+	</div>
+	<div class="col-md-6">
+		<h1>三寶飯</h1>
+		<p>主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+	</div>
+	</div>
+	<div class="container" id="a12">
+		<div class="row">
+	<div class="col-md-6">
+		<h1>招牌飯</h1>
+		<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
+	</div>
+		<div class="col-md-6" >
+		<img class="img-fluid" src="images\7.png">
+	</div>
+	</div>
+	</div>
+</section>
+</div>  
 
-
+<section id="latest">
+	<footer>
+		<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<img class="img-fluid" src="images/logo1.png">
+			</div>
+			<div class="col-md-4">
+				<h3>連結</h3>
+				<a href="index.html">關於龍品</a>
+				<a href="product.html">產品介紹</a>
+				<a href="booking.html">線上訂餐</a>
+			</div>
+			<div class="col-md-4">
+				<h3>聯絡我們</h3>
+				<p>台中市北區北平路二段68之1號<br>Phone:(04)-2291-8106</p>
+			</div>
+		</div>
+</footer>
+</section>
 </body>
 </html>
