--- a/product.html
+++ b/product.html
@@ -17,31 +17,34 @@
 <body>
 	<section id="intro">
 		<div class="container">
-			<div class="navbar navbar-expand-md">
-			<img src="images/logo1.png" class="img-fluid" alt="logo">
-			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-			<span class="fas fa-bars"></span>
-			</button>
-			<div class="collapse navbar-collapse " id="collapsibleNavbar">
-				<ul class="navbar-nav ">
-						<a class="navbar-brand" href="index.html"></a>
-				<ul class="navbar-nav ">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">關於龍品</a></li>
-					<li class="nav-item">
-						<a class="nav-link" href="product.html">產品介紹</a></li>
-					<li class="nav-item">
-						<a class="nav-link" href="booking.html" >線上訂餐</a>
-					<li>
-				</ul>
-			</div>  
+		  <div class="navbar navbar-expand-md">
+			<a class="navbar-brand" href="#">
+			  <img src="images/logo.png" alt="logo" style="width:130px;">
+			</a> 
+		  <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+		  <span class="fas fa-bars"></span>
+		  </button>
+				<div class="collapse navbar-collapse " id="collapsibleNavbar">
+			<ul class="navbar-nav ">
+				<a class="navbar-brand" href="index.html"></a>
+			<ul class="navbar-nav ">
+			  <li class="nav-item">
+				<a class="nav-link" href="index.html">關於龍品</a></li>
+			  <li class="nav-item">
+				<a class="nav-link" href="product.html">產品介紹</a></li>
+			  <li class="nav-item">
+				<a class="nav-link" href="booking.html" >線上訂餐</a>
+			  <li>
+			</ul>
+		  </div>  
+		  </div>
 		</div>
 	</section>	
 <section id="second" >
-	<div class="w3-display-container">
+	<div class="w3-display-container ">
 		<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店"  style="height: 650px; width:100%;">
-		<div class="w3-display-middle ">
-		<h1>產品介紹</h1>
+		<div class="w3-display-middle">
+		<h1>產品介紹</h1>	
 		<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
 		</div>
 	</div>
@@ -49,7 +52,7 @@
 
 <div style="background-image: url('images/bg.jpeg');">      
 <section id="third">
-	<div class="container-fluid">
+	
 		<div class="btn-group">
 			<a class="btn btn-blue"  href="#a1">魯肉便當</a>
 	        <a class="btn  btn-green" href="#a2">特製便當</a>
@@ -66,7 +69,7 @@
 	        <a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
 	        <a class="btn  btn-royalblue" href="#a12">招牌飯</a>
 		</div>
-	</div>
+	
 </section>
     
 <section id="fourth">
@@ -84,15 +87,16 @@
 
 	<div class="container" id="a2">
 		<div class="row">
-			<div class="col-md-6" >
+			<div class="col-md order-md-2 " >
+				<img class="img-fluid" src="images\7.png">
+			</div>
+			<div class="col-md order-md-1 " >
 				<h1>特製便當</h1>
 				<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
 			</div>
-			<div class="col-md-6" >
-				<img class="img-fluid" src="images\7.png">
-			</div>
 		</div>
 	</div>
+
 	<div class="container" id="a3">
 		<div class="row">
 			<div class="col-md-6" >
@@ -104,17 +108,19 @@
 	</div>
 	</div>
 	</div>
+	
 	<div class="container" id="a4">
 		<div class="row">
-	<div class="col-md-6">
+	<div class="col-md-6  order-md-1" >
+		<img class="img-fluid " src="images\7.png"/>
+	</div>
+	<div class="col-md-6 ">
 		<h1>蝦捲飯</h1>	
 		<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
 	</div>
-	<div class="col-md-6" >
-		<img class="img-fluid" src="images\7.png"/>
 	</div>
 	</div>
-	</div>
+
 	<div class="container" id="a5">
 		<div class="row">
 			<div class="col-md-6" >
@@ -126,17 +132,19 @@
 	</div>
 	</div>
 	</div>
+
 	<div class="container" id="a6">
 		<div class="row">
+	<div class="col-md-6" >
+		<img class="img-fluid  order-md-1" src="images\7.png"/>
+	</div>
 	<div class="col-md-6">
 		<h1>炸雞腿飯</h1>
 		<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
 	</div>
-	<div class="col-md-6" >
-		<img class="img-fluid" src="images\7.png"/>
 	</div>
 	</div>
-	</div>
+
 	<div class="container" id="a7">
 		<div class="row">
 			<div class="col-md-6" >
@@ -148,20 +156,22 @@
 	</div>
 	</div>
 	</div>
+
 	<div class="container" id="a8">
 		<div class="row">	
+	<div class="col-md-6  order-md-1" >
+		<img class="img-fluid" src="images\7.png"/>
+	</div>
 	<div class="col-md-6">
 		<h1>炸排骨飯</h1>
 		<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
 	</div>
-	<div class="col-md-6" >
-		<img class="img-fluid" src="images\7.png"/>
 	</div>
 	</div>
-	</div>
+
 	<div class="container" id="a9">
 		<div class="row">
-			<div class="col-md-6" >
+			<div class="col-md-6 " >
 				<img class="img-fluid" src="images\7.png">
 	</div>
 	<div class="col-md-6">
@@ -170,17 +180,20 @@
 	</div>
 	</div>
 	</div>
+
 	<div class="container" id="a10">
 		<div class="row">
-			<div class="col-md-6">
-			<h1>雙捲飯</h1>
-			<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
-		</div>
-			<div class="col-md-6" >
+			
+			<div class="col-md-6  order-md-1" >
 				<img class="img-fluid" src="images\7.png">
 	</div>
+	<div class="col-md-6 ">
+		<h1>雙捲飯</h1>
+		<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
 	</div>
 	</div>
+	</div>
+
 	<div class="container" id="a11">
 		<div class="row">
 			<div class="col-md-6" >
@@ -192,14 +205,15 @@
 	</div>
 	</div>
 	</div>
+
 	<div class="container" id="a12">
 		<div class="row">
+		<div class="col-md-6  order-md-1" >
+		<img class="img-fluid" src="images\7.png">
+	</div>
 	<div class="col-md-6">
 		<h1>招牌飯</h1>
 		<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
-	</div>
-		<div class="col-md-6" >
-		<img class="img-fluid" src="images\7.png">
 	</div>
 	</div>
 	</div>
