--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
   <section id="intro">
     <div class="container">
       <div class="navbar navbar-expand-md">
-      <img src="images/logo1.png" class="img-fluid" alt="logo">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="logo" style="width:130px;">
+        </a> 
       <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="fas fa-bars"></span>
       </button>
-      <div class="collapse navbar-collapse " id="collapsibleNavbar">
+            <div class="collapse navbar-collapse " id="collapsibleNavbar">
         <ul class="navbar-nav ">
             <a class="navbar-brand" href="index.html"></a>
         <ul class="navbar-nav ">
@@ -42,7 +44,7 @@
   <section id="index-second" >
     <div class="w3-display-container">
       <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店" style="width: 100%; height: 650px;">
-      <div class="w3-display-middle">
+      <div class="w3-display-middle ">
         <h1>關於龍品</h1>
 		    <p>二十多年用心經營，台中人首選的好味道</p>
 		  </div>
