調整產品擺放位置

--- a/product.html
+++ b/product.html
@@ -135,11 +135,11 @@
 
 	<div class="container" id="a6">
 		<div class="row">
-	<div class="col-md-6" >
-		<img class="img-fluid  order-md-1" src="images\7.png"/>
+	<div class="col-md-6  order-md-1" >
+		<img class="img-fluid " src="images\7.png"/>
 	</div>
-	<div class="col-md-6">
-		<h1>炸雞腿飯</h1>
+	<div class="col-md-6 ">
+		<h1>炸雞腿飯</h1>	
 		<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
 	</div>
 	</div>
