--- a/booking.html
+++ b/booking.html
@@ -14,7 +14,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="1.js"></script>
+<script src="scripts/1.js"></script>
 <script src="https://kit.fontawesome.com/c3595a1670.js" crossorigin="anonymous"></script>
 <title>線上訂餐</title>
 
