表單驗證加強

--- a/booking.html
+++ b/booking.html
@@ -73,7 +73,7 @@
 				
 					<label>電子郵件:</label>
 					<input type="email" name="usermail" class="form-control"   required>
-					<div id="demo">
+					<div id="demo" style="display: none;">
 					<label>外送地址:</label>
 							
 								<select class="form-control" name="column1" id="column1" size=1  placeholder="請輸入電子郵件" onclick="onChangeColumn1()">
