--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
 <section id="index-fourth">
   <div class="container text-align">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center iframe-rwd">
         <h2>我們的位置</h2>
-        <iframe  frameborder='0' scrolling='no' marginheight='0' marginwidth='0' src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
+        <iframe  src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
       </div>
  
