--- a/index.html
+++ b/index.html
@@ -16,34 +16,40 @@
 
 <body>
   <section id="intro">
-    <div class="container">
-      <div class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="logo" style="width:130px;">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" width="60" height="40" class="d-inline-block align-top" alt="龍品快餐店">
         </a>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="fas fa-bars"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse " id="collapsibleNavbar">
-          <ul class="navbar-nav ">
-            <a class="navbar-brand" href="index.html"></a>
-            <ul class="navbar-nav ">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">關於龍品</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="product.html">產品介紹</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="booking.html">線上訂餐</a>
-              <li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">關於龍品</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="product.html">產品介紹</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="booking.html">線上訂餐</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+            <a class="text-muted nav-link"
+              href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i
+                class="fab fa-facebook-square"></i></i>Facebook</a>
+          </span>
         </div>
       </div>
-    </div>
+    </nav>
   </section>
 
   <section id="index-second">
     <div class="w3-display-container">
-      <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店" style="width: 100%; height: 650px;">
+      <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店" width="100%">
       <div class="w3-display-middle ">
         <h1>關於龍品</h1>
         <p>二十多年用心經營，台中人首選的好味道</p>
@@ -54,17 +60,17 @@
   <section id="index-third">
     <div class="container-fluid" id="menu">
       <div class="row w3-card">
-        <div class="col-md-6">
+        <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'business');" id="myLink">
             <div class="tablink">
-              <h2>經營理念</h2>
+              <h5>經營理念</h5>
             </div>
           </a>
         </div>
-        <div class="col-md-6">
+        <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'history');">
             <div class=" tablink">
-              <h2>歷史起源</h2>
+              <h5>歷史起源</h5>
             </div>
           </a>
         </div>
@@ -96,14 +102,7 @@
             </div>
             <div class="col-md-6">
               <p>
-                創始店名為"龍品魚丸店"，創立於民國八十三年，在台
-                中已好幾家分店的龍品魚丸店，而且在網路上相當高名
-                氣與好評，不少部落客和網友都直稱這家是台中便當界
-                美食，且經常店門口都會排上一場串人龍，就能知道民
-                眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店
-                龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式
-                以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸
-                店拿取蝦漿的食材原料，因此取龍品之名。
+                創始店名為"龍品魚丸店"，創立於民國八十三年，在台中已好幾家分店的龍品魚丸店，而且在網路上相當高名氣與好評，不少部落客和網友都直稱這家是台中便當界美食，且經常店門口都會排上一場串人龍，就能知道民眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸店拿取蝦漿的食材原料，因此取龍品之名。
               </p>
             </div>
           </div>
@@ -115,34 +114,33 @@
   <section id="index-fourth">
     <div class="container text-align">
       <div class="row justify-content-center iframe-rwd">
-        <h2>我們的位置</h2>
+        <h5>我們的位置</h5>
         <iframe
           src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
       </div>
-
-
+      </div>
   </section>
 
-  <section id="latest">
-    <footer>
-      <div class="container">
+  <section id="index-latest">
+<div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-3">
             <img class="img-fluid" src="images/logo1.png">
           </div>
-          <div class="col-md-4">
-            <h3>連結</h3>
+          <div class="col-5">
+            <h5>連結</h5>
             <a href="index.html">關於龍品</a>
             <a href="product.html">產品介紹</a>
             <a href="booking.html">線上訂餐</a>
           </div>
-          <div class="col-md-4">
-            <h3>聯絡我們</h3>
+          <div class="col-4">
+            <h5>聯絡我們</h5>
             <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
           </div>
         </div>
-    </footer>
+        </div>
+      
   </section>
 
   <script>
