--- a/product.html
+++ b/product.html
@@ -17,30 +17,35 @@
 
 <body>
 	<section id="intro">
-		<div class="container">
-			<div class="navbar navbar-expand-md">
-				<a class="navbar-brand" href="#">
-					<img src="images/logo.png" alt="logo" style="width:130px;">
-				</a>
-				<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-					<span class="fas fa-bars"></span>
-				</button>
-				<div class="collapse navbar-collapse " id="collapsibleNavbar">
-					<ul class="navbar-nav ">
-						<a class="navbar-brand" href="index.html"></a>
-						<ul class="navbar-nav ">
-							<li class="nav-item">
-								<a class="nav-link" href="index.html">關於龍品</a></li>
-							<li class="nav-item">
-								<a class="nav-link" href="product.html">產品介紹</a></li>
-							<li class="nav-item">
-								<a class="nav-link" href="booking.html">線上訂餐</a>
-							<li>
-						</ul>
-				</div>
+		<nav class="navbar navbar-expand-md navbar-light">
+		  <div class="container-fluid">
+			<a class="navbar-brand" href="index.html">
+			  <img src="images/logo.png" width="100" height="80" class="d-inline-block align-top" alt="龍品快餐店">
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+			  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active">
+				  <a class="nav-link" href="index.html">關於龍品</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="product.html">產品介紹</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="booking.html">線上訂餐</a>
+				</li>
+			  </ul>
+			  <span class="navbar-text">
+					<a class="text-muted nav-link" href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i class="fab fa-facebook-square"></i></i>Facebook</a>				
+			  </span>
 			</div>
-		</div>
-	</section>
+		  </div>
+		</nav>
+	  </section>
+
 	<section id="second">
 		<div class="w3-display-container ">
 			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" style="height: 650px; width:100%;">
