網頁下方切齊底部

--- a/product.html
+++ b/product.html
@@ -226,23 +226,25 @@
 	</div>
 
 	<section id="index-latest">
-		<div class="container">
-		  <div class="row">
-			<div class="col">
-			  <img class="img-fluid" src="images/logo1.png">
-			</div>
-			<div class="col">
-			  <h5>連結</h5>
-			  <a href="index.html">關於龍品</a></br>
-			  <a href="product.html">產品介紹</a></br>
-			  <a href="booking.html">線上訂餐</a>
-			</div>
-			<div class="col">
-			  <h5>聯絡我們</h5>
-			  <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+		<footer>
+		  <div class="container">
+			<div class="row">
+			  <div class="col">
+				<img class="img-fluid" src="images/logo1.png">
+			  </div>
+			  <div class="col">
+				<h5>連結</h5>
+				<a href="index.html">關於龍品</a></br>
+				<a href="product.html">產品介紹</a></br>
+				<a href="booking.html">線上訂餐</a>
+			  </div>
+			  <div class="col">
+				<h5>聯絡我們</h5>
+				<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+			  </div>
 			</div>
 		  </div>
-		</div>
+		</footer>
 	  </section>
 </body>
 
