--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
   <section id="index-second">
     <div class="w3-display-container">
-      <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店" width="100%">
+      <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店">
       <div class="w3-display-middle ">
-        <h1>關於龍品</h1>
+        <p class="title">關於龍品</p>
         <p>二十多年用心經營，台中人首選的好味道</p>
       </div>
     </div>
@@ -63,14 +63,14 @@
         <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'business');" id="myLink">
             <div class="tablink">
-              <h5>經營理念</h5>
+              <p class="title">經營理念</p>
             </div>
           </a>
         </div>
         <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'history');">
             <div class=" tablink">
-              <h5>歷史起源</h5>
+              <p class="title">歷史起源</p>
             </div>
           </a>
         </div>
@@ -97,10 +97,10 @@
       <div id="history" class="container-fluid menu w3-card">
         <div class="container ">
           <div class="row justify-content-center">
-            <div calss="col-md-6">
+            <div calss="col-sm-12 col-lg-6">
               <img class="img-fluid" src="images\history.jpg">
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-12 col-lg-6">
               <p>
                 創始店名為"龍品魚丸店"，創立於民國八十三年，在台中已好幾家分店的龍品魚丸店，而且在網路上相當高名氣與好評，不少部落客和網友都直稱這家是台中便當界美食，且經常店門口都會排上一場串人龍，就能知道民眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸店拿取蝦漿的食材原料，因此取龍品之名。
               </p>
@@ -114,7 +114,7 @@
   <section id="index-fourth">
     <div class="container text-align">
       <div class="row justify-content-center iframe-rwd">
-        <h5>我們的位置</h5>
+        <p class="title">我們的位置</p>
         <iframe
           src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
@@ -126,18 +126,17 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col">
-            <img class="img-fluid" src="images/logo1.png">
+          <div class="col-4">
+            <p>連結</p>
+            <div class="btn-group-vertical">
+              <a href="index.html">關於龍品</a>
+              <a href="product.html">產品介紹</a>
+              <a href="booking.html">線上訂餐</a>
+            </div>
           </div>
           <div class="col">
-            <h5>連結</h5>
-            <a href="index.html">關於龍品</a></br>
-            <a href="product.html">產品介紹</a></br>
-            <a href="booking.html">線上訂餐</a>
-          </div>
-          <div class="col">
-            <h5>聯絡我們</h5>
-            <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+            <p>聯絡我們</p>
+            <p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
           </div>
         </div>
       </div>
