--- a/product.html
+++ b/product.html
@@ -51,7 +51,7 @@
 		<div class="w3-display-container ">
 			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" width="100%">
 			<div class="w3-display-middle">
-				<h1>產品介紹</h1>
+				<p class="title">產品介紹</p>
 				<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
 			</div>
 		</div>
@@ -60,13 +60,14 @@
 	<div style="background-image: url('images/bg.jpeg');">
 		<section id="third">
 			<div class="container-fuild">
-				<div class="row justify-content-center">
-					<a class="btn btn-blue" href="#a1">魯肉便當</a>
+				<div class="row justify-content-center button-group1">
+					<a class="btn btn-blue align-self-center" href="#a1">魯肉便當</a>
 					<a class="btn  btn-green" href="#a2">特製便當</a>
 					<a class="btn  btn-orange" href="#a3">花枝捲飯</a>
 					<a class="btn  btn-red" href="#a4">蝦捲飯</a>
 					<a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
-					<a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>
+					<a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a></div>
+				<div class="row justify-content-center button-group2">
 					<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
 					<a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
 					<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
@@ -80,10 +81,10 @@
 		<section id="fourth">
 			<div class="container" id="a1">
 				<div class="row  justify-content-between">
-					<div class="col-md-6 col-sm-12 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\1.png">
 					</div>
-					<div class="col-md-6 col-sm-12">
+					<div class="col-sm ">
 						<p class="title">魯肉便當 </p>
 						<p>主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
 					</div>
@@ -92,10 +93,10 @@
 
 			<div class="container" id="a2">
 				<div class="row justify-content-between">
-					<div class="col-md-6 order-md-2 align-self-center">
+					<div class="col-sm order-sm-2 align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\2.png">
 					</div>
-					<div class="col-md-6 order-md-1 ">
+					<div class="col-sm order-sm-1 ">
 						<p class="title">特製便當</p>
 						<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
 					</div>
@@ -104,10 +105,10 @@
 
 			<div class="container" id="a3">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\3.png" />
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">花枝捲飯</p>
 						<p>主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -116,10 +117,10 @@
 
 			<div class="container" id="a4">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center  order-md-1">
+					<div class="col-sm align-self-center  order-sm-1">
 						<img class="img-fluid rounded mx-auto d-block" src="images\4.png" />
 					</div>
-					<div class="col-md-6 ">
+					<div class="col-sm ">
 						<p class="title">蝦捲飯</p>
 						<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -128,10 +129,10 @@
 
 			<div class="container" id="a5">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\5.png" />
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">滷排骨飯</p>
 						<p>主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
 					</div>
@@ -140,10 +141,10 @@
 
 			<div class="container" id="a6">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center order-md-1">
+					<div class="col-sm align-self-center order-sm-1">
 						<img class="img-fluid rounded mx-auto d-block" src="images\6.png" />
 					</div>
-					<div class="col-md-6 ">
+					<div class="col-sm ">
 						<p class="title">炸雞腿飯</p>
 						<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -152,10 +153,10 @@
 
 			<div class="container" id="a7">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\7.png" />
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">鱈魚飯</p>
 						<p>主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
 					</div>
@@ -164,10 +165,10 @@
 
 			<div class="container" id="a8">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center order-md-1">
+					<div class="col-sm align-self-center order-sm-1">
 						<img class="img-fluid rounded mx-auto d-block" src="images\8.png" />
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">炸排骨飯</p>
 						<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
 					</div>
@@ -176,10 +177,10 @@
 
 			<div class="container" id="a9">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\9.png">
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">香雞排飯</p>
 						<p>主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -189,10 +190,10 @@
 			<div class="container" id="a10">
 				<div class="row justify-content-between">
 
-					<div class="col-md-6 align-self-center order-md-1">
+					<div class="col-sm align-self-center order-sm-1">
 						<img class="img-fluid rounded mx-auto d-block" src="images\10.png">
 					</div>
-					<div class="col-md-6 ">
+					<div class="col-sm ">
 						<p class="title">雙捲飯</p>
 						<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -201,10 +202,10 @@
 
 			<div class="container" id="a11">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center">
+					<div class="col-sm align-self-center">
 						<img class="img-fluid rounded mx-auto d-block" src="images\11.png">
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">三寶飯</p>
 						<p>主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -213,10 +214,10 @@
 
 			<div class="container" id="a12">
 				<div class="row justify-content-between">
-					<div class="col-md-6 align-self-center order-md-1">
+					<div class="col-sm align-self-center order-sm-1">
 						<img class="img-fluid rounded mx-auto d-block" src="images\12.png">
 					</div>
-					<div class="col-md-6">
+					<div class="col-sm">
 						<p class="title">招牌飯</p>
 						<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
@@ -227,25 +228,24 @@
 
 	<section id="index-latest">
 		<footer>
-		  <div class="container">
-			<div class="row">
-			  <div class="col">
-				<img class="img-fluid" src="images/logo1.png">
-			  </div>
-			  <div class="col">
-				<h5>連結</h5>
-				<a href="index.html">關於龍品</a></br>
-				<a href="product.html">產品介紹</a></br>
-				<a href="booking.html">線上訂餐</a>
-			  </div>
-			  <div class="col">
-				<h5>聯絡我們</h5>
-				<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
-			  </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<p>連結</p>
+						<div class="btn-group-vertical">
+							<a href="index.html">關於龍品</a>
+							<a href="product.html">產品介紹</a>
+							<a href="booking.html">線上訂餐</a>
+						</div>
+					</div>
+					<div class="col">
+						<p>聯絡我們</p>
+						<p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
+					</div>
+				</div>
 			</div>
-		  </div>
 		</footer>
-	  </section>
+	</section>
 </body>
 
 </html>
