--- a/booking.html
+++ b/booking.html
@@ -53,7 +53,7 @@
 
 	<section id="booking-second" style="background-image: url('images/bg.jpg')" ;>
 		<div class="container">
-			<form name="theForm" method="post" action="booking.php">
+			<form name="theForm" class="form" method="post" action="booking.php">
 				<div class="row justify-content-center">
 					<h2>請輸入訂購資料</h2>
 				</div>
@@ -70,8 +70,9 @@
 				</div></br>
 				<label>取餐時間:</label>
 				<div class="form-inline">
-					<input type="text" class="form-control" name="time" required id="datepicker" onchange="OrderTime()">
-					<select id="ti" name="ti" required class="form-control"></select>
+					<input type="text" class="form-control col-sm-6 col-12" name="time" required id="datepicker"
+						onchange="OrderTime()">
+					<select id="ti" name="ti" required class="form-control col-sm-6 col-12"></select>
 				</div>
 				<label for="usr">姓名:</label>
 				<input type="text" class="form-control" name="username" required>
@@ -106,25 +107,24 @@
 
 	<section id="index-latest">
 		<footer>
-		  <div class="container">
-			<div class="row">
-			  <div class="col">
-				<img class="img-fluid" src="images/logo1.png">
-			  </div>
-			  <div class="col">
-				<h5>連結</h5>
-				<a href="index.html">關於龍品</a></br>
-				<a href="product.html">產品介紹</a></br>
-				<a href="booking.html">線上訂餐</a>
-			  </div>
-			  <div class="col">
-				<h5>聯絡我們</h5>
-				<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
-			  </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<p>連結</p>
+						<div class="btn-group-vertical">
+							<a href="index.html">關於龍品</a>
+							<a href="product.html">產品介紹</a>
+							<a href="booking.html">線上訂餐</a>
+						</div>
+					</div>
+					<div class="col">
+						<p>聯絡我們</p>
+						<p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
+					</div>
+				</div>
 			</div>
-		  </div>
 		</footer>
-	  </section>
+	</section>
 </body>
 
 </html>
